--- a/privacy.html
+++ b/privacy.html
@@ -50,7 +50,7 @@
   <h2>6. お問い合わせ</h2>
   <p>本ポリシーに関するお問い合わせは、以下までお願いいたします。</p>
   <p>開発者：濱口淳史<br>
-  メール：<a href="mailto:cocoyell.app@gmail.com">cocoyell.app@gmail.com</a></p>
+  メール：<a href="mailto:heiwanasora@gmail.com">cocoyell.app@gmail.com</a></p>
 
   <h2>7. 改定</h2>
   <p>本プライバシーポリシーは、必要に応じて改定されることがあります。  
