--- a/privacy.html
+++ b/privacy.html
@@ -3,59 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>プライバシーポリシー | CocoYell（スミス）</title>
+  <title>CocoYell（スミス） プライバシーポリシー</title>
   <style>
-    body { font-family: "Hiragino Kaku Gothic ProN", sans-serif; line-height: 1.8; padding: 24px; max-width: 800px; margin: auto; }
+    body { 
+      font-family: "Hiragino Kaku Gothic ProN", "Noto Sans JP", sans-serif;
+      line-height: 1.8;
+      padding: 24px;
+      max-width: 800px;
+      margin: auto;
+      background-color: #fafafa;
+      color: #333;
+    }
     h1 { text-align: center; }
     h2 { margin-top: 32px; border-bottom: 1px solid #ddd; }
   </style>
 </head>
 <body>
-  <h1>プライバシーポリシー</h1>
-  <p>本アプリ「CocoYell（スミス）」は、ユーザーの心に寄り添うAIカウンセラーアプリです。  
-  開発者（濱口淳史）は、ユーザーの個人情報を保護し、安心してご利用いただけるよう最善を尽くします。</p>
+  <h1>CocoYell（スミス） プライバシーポリシー</h1>
 
-  <h2>1. 取得する情報</h2>
-  <p>本アプリは、以下の情報を取得する場合があります。</p>
+  <p>このアプリ「CocoYell（スミス）」は、ユーザーの心に寄り添い、日々の気づきや感情を整理するためのAIカウンセラーアプリです。以下のとおり、ユーザーのプライバシーを尊重し、個人情報の取り扱いについて定めます。</p>
+
+  <h2>1. 収集する情報</h2>
   <ul>
-    <li>アプリ利用中にユーザーが入力したテキスト内容（AI応答生成のため）</li>
-    <li>Googleアカウント情報（ログイン認証のため）</li>
-    <li>課金・購入情報（サブスクリプション管理のため）</li>
+    <li>Googleログインを利用した認証情報（メールアドレス、ユーザー名）</li>
+    <li>アプリ内で入力された日記やメッセージ内容（AI応答生成のみに使用）</li>
+    <li>画像データ（ユーザーが日記投稿時に選択した場合）</li>
   </ul>
-  <p>これらの情報はFirebaseやOpenAIの安全な通信を通じてのみ処理され、  
-  開発者が個人を特定できる形で保持・再利用することはありません。</p>
 
   <h2>2. 利用目的</h2>
-  <p>取得した情報は以下の目的でのみ使用します。</p>
   <ul>
-    <li>AI応答（スミス）によるカウンセリング・対話サービスの提供</li>
-    <li>利用制限・サブスクリプション管理のため</li>
-    <li>不具合対応・改善などサービス品質の向上のため</li>
+    <li>AIによる共感的なフィードバックの提供</li>
+    <li>利用回数や機能制限の管理（無料・有料プランの区別）</li>
+    <li>アプリ品質向上・不具合対応</li>
   </ul>
 
-  <h2>3. 第三者提供について</h2>
-  <p>当アプリは、法令に基づく場合を除き、取得した情報を第三者に提供することはありません。</p>
+  <h2>3. 情報の管理</h2>
+  <p>取得した情報はFirebaseおよびOpenAI APIを通じて安全に取り扱い、外部への不正な共有や販売は一切行いません。</p>
 
-  <h2>4. データの保存と削除</h2>
-  <p>ユーザーが入力したテキスト・画像データは、必要最小限の期間のみFirebase上に保存され、  
-  開発者による個人識別や再利用は行いません。</p>
-
-  <h2>5. 外部サービス</h2>
-  <p>本アプリは以下の外部サービスを利用しています。</p>
+  <h2>4. 外部サービスの利用</h2>
   <ul>
-    <li>OpenAI API（AI応答生成）</li>
-    <li>Firebase Authentication / Firestore / Storage（ログイン・データ管理）</li>
+    <li>Firebase（Google LLC）</li>
+    <li>OpenAI API</li>
   </ul>
 
-  <h2>6. お問い合わせ</h2>
-  <p>本ポリシーに関するお問い合わせは、以下までお願いいたします。</p>
-  <p>開発者：濱口淳史<br>
-  メール：<a href="mailto:heiwanasora@gmail.com">cocoyell.app@gmail.com</a></p>
+  <h2>5. ユーザーの権利</h2>
+  <p>ユーザーはいつでも自身のデータ削除を希望できます。削除を希望される場合は、以下のサポートメールにご連絡ください。</p>
+
+  <h2>6. お問い合わせ先</h2>
+  <p>運営者: ヘイワナソラ<br>
+  メール: <a href="mailto:heiwanasora@gmail.com">heiwanasora@gmail.com</a></p>
 
   <h2>7. 改定</h2>
-  <p>本プライバシーポリシーは、必要に応じて改定されることがあります。  
-  重大な変更がある場合は、アプリ内または公式サイトでお知らせいたします。</p>
+  <p>本ポリシーは、法令の改定またはサービス内容の変更に応じて予告なく更新されることがあります。</p>
 
-  <p style="text-align:right; margin-top:40px;">制定日：2025年10月25日</p>
+  <p style="text-align:right; margin-top:40px;">© 2025 CocoYell / Heiwansora</p>
 </body>
 </html>
